carts-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  labels:
    name: carts-db
spec:
  ports:
    # the port that this service should serve on
  - port: 27017
    targetPort: 27017
  selector:
    name: cpx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: carts-db-ingress
  annotations:
   kubernetes.io/ingress.class: "cpx"
   ingress.citrix.com/insecure-port: "27017"
spec:
  rules:
  - host: carts-db.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: carts-db-cpx
          servicePort: 27017
  - host: carts-db
    http:
      paths:
      - path:
        backend:
          serviceName: carts-db-cpx
          servicePort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db-cpx
  labels:
    name: carts-db-cpx
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: carts-db
