catalogue-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  labels:
    name: catalogue-db
spec:
  ports:
    # the port that this service should serve on
  - port: 3306
    targetPort: 3306
  selector:
    name: cpx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catalogue-db-ingress
  annotations:
   kubernetes.io/ingress.class: "cpx"
   ingress.citrix.com/insecure-port: "3306"
spec:
  rules:
  - host: catalogue-db.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: catalogue-db-cpx
          servicePort: 3306
  - host: catalogue-db
    http:
      paths:
      - path:
        backend:
          serviceName: catalogue-db-cpx
          servicePort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db-cpx
  labels:
    name: catalogue-db-cpx
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: catalogue-db
