catalogue-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  labels:
    name: catalogue
spec:
  ports:
    # the port that this service should serve on
  - port: 82
    targetPort: 82
  selector:
    name: cpx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catalogue-ingress
  annotations:
   kubernetes.io/ingress.class: "cpx"
   ingress.citrix.com/insecure-port: "82"
spec:
  rules:
  - host: catalogue.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: catalogue-cpx
          servicePort: 82
  - host: catalogue
    http:
      paths:
      - path:
        backend:
          serviceName: catalogue-cpx
          servicePort: 82
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-cpx
  labels:
    name: catalogue-cpx
spec:
  ports:
    port: 82
    targetPort: 80
  selector:
    app: catalogue
