orders-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  labels:
    name: orders-db
spec:
  ports:
    # the port that this service should serve on
  - port: 27018
    targetPort: 27018
  selector:
    name: cpx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: orders-db-ingress
  annotations:
   kubernetes.io/ingress.class: "cpx"
   ingress.citrix.com/insecure-port: "27018"
spec:
  rules:
  - host: orders-db.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: orders-db-cpx
          servicePort: 27018
  - host: orders-db
    http:
      paths:
      - path:
        backend:
          serviceName: orders-db-cpx
          servicePort: 27018
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db-cpx
  labels:
    name: orders-db-cpx
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 27018
    targetPort: 27017
  selector:
    app: orders-db
