orders-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    name: orders
spec:
  ports:
    # the port that this service should serve on
  - port: 83
    targetPort: 83
  selector:
    app: cpx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: orders-ingress
  annotations:
   kubernetes.io/ingress.class: "cpx"
   ingress.citrix.com/insecure-port: "83"
spec:
  rules:
  - host: orders.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: orders-cpx
          servicePort: 83
  - host: orders
    http:
      paths:
      - path:
        backend:
          serviceName: orders-cpx
          servicePort: 83
---
apiVersion: v1
kind: Service
metadata:
  name: orders-cpx
  labels:
    name: orders-cpx
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 83
    targetPort: 80
  selector:
    app: orders
