queue-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  labels:
    name: queue-master
  annotations:
    prometheus.io/path: "/prometheus"
spec:
  ports:
    # the port that this service should serve on
  - port: 85
    targetPort: 85
  selector:
    app: cpx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: queue-master-ingress
  annotations:
   kubernetes.io/ingress.class: "cpx"
   ingress.citrix.com/insecure-port: "85"
spec:
  rules:
  - host: queue-master.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: queue-master-cpx
          servicePort: 85
  - host: queue-master
    http:
      paths:
      - path:
        backend:
          serviceName: queue-master-cpx
          servicePort: 85
---
apiVersion: v1
kind: Service
metadata:
  name: queue-master-cpx
  labels:
    name: queue-master-cpx
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 85
    targetPort: 80
  selector:
    app: queue-master
