rabbitmq-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
spec:
  ports:
    # the port that this service should serve on
  - port: 5672
    name: rabbitmq
    targetPort: 5672
  - port: 9090
    name: exporter
    targetPort: exporter
    protocol: TCP
  selector:
    name: cpx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
   kubernetes.io/ingress.class: "cpx"
   ingress.citrix.com/insecure-port: "5672"
spec:
  rules:
  - host: rabbitmq.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: rabbitmq-cpx
          servicePort: 5672
  - host: rabbitmq
    http:
      paths:
      - path:
        backend:
          serviceName: rabbitmq-cpx
          servicePort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cpx
  labels:
    name: rabbitmq-cpx
spec:
  ports:
    port: 5672
    targetPort: 5672
  selector:
    app: rabbitmq
