session-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: session-db
  labels:
    name: session-db
spec:
  ports:
    # the port that this service should serve on
  - port: 6379
    targetPort: 6379
  selector:
    name: cpx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: session-db-ingress
  annotations:
   kubernetes.io/ingress.class: "cpx"
   ingress.citrix.com/insecure-port: "6379"
spec:
  rules:
  - host: session-db.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: session-db-cpx
          servicePort: 6379
  - host: session-db
    http:
      paths:
      - path:
        backend:
          serviceName: session-db-cpx
          servicePort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: session-db-cpx
  labels:
    name: session-db-cpx
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: session-db
