shipping-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    name: shipping
spec:
  ports:
    # the port that this service should serve on
  - port: 86
    targetPort: 86
  selector:
    app: cpx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shipping-ingress
  annotations:
   kubernetes.io/ingress.class: "cpx"
   ingress.citrix.com/insecure-port: "86"
spec:
  rules:
  - host: shipping.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: shipping-cpx
          servicePort: 86
  - host: shipping
    http:
      paths:
      - path:
        backend:
          serviceName: shipping-cpx
          servicePort: 86
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-cpx
  labels:
    name: shipping-cpx
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 86
    targetPort: 80
  selector:
    app: shipping
