tier-1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tier-1-ingress
  annotations:
     kubernetes.io/ingress.class: "tier-1-vpx"
spec:
  rules:
  - host: sockshop.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cpx-service
          servicePort: 80
