user-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    name: user
spec:
  ports:
    # the port that this service should serve on
  - port: 87
    targetPort: 87
  selector:
    app: cpx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
   kubernetes.io/ingress.class: "tier-2-cpx"
   ingress.citrix.com/insecure-port: "87"
spec:
  rules:
  - host: user.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: user-cpx
          servicePort: 87
  - host: user
    http:
      paths:
      - path:
        backend:
          serviceName: user-cpx
          servicePort: 87
---
apiVersion: v1
kind: Service
metadata:
  name: user-cpx
  labels:
    name: user-cpx
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 87
    targetPort: 80
  selector:
    app: user
